04/ Fix header height differences, loader alignmnt

--- a/04_movie-search/src/assets/styles/components/_DataNotFound.scss
+++ b/04_movie-search/src/assets/styles/components/_DataNotFound.scss
@@ -11,7 +11,8 @@
 
 @media (max-width: 800px) {
     .data-not-found {
-        margin: 100px auto 0 auto;
+        margin: 0 auto;
+        padding-top: 100px;
         max-width: 80%;
 
         &__message {
