--- a/04_movie-search/src/assets/styles/components/_EmptyWatchlist.scss
+++ b/04_movie-search/src/assets/styles/components/_EmptyWatchlist.scss
@@ -24,7 +24,8 @@
 @media (max-width: 800px) {
     .empty-watchlist {
         &__container {
-            margin: 100px auto 0 auto;
+            margin: 0 auto;
+            padding-top: 100px;
             max-width: 80%;
         }
 
